--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="assets/js/jquery-3.4.1.js"></script>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <script src="assets/bootstrap/js/popper.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script> 
 
   <link rel="stylesheet" href="assets/css/mystyle.css">
 
@@ -207,7 +207,7 @@
                     <label for="formControlRange">
                         <b class="whiteText">Animation</b>
                         <span class="badge badge-danger ml-2" id="AnimationName"></span>
-                        <span id=""></span>
+                        <span id="animationText"></span>
                     </label>
                     <input type="range" min="1" max="7" 
                         class="form-control-range" id="animation">
