--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <!-- Animation Presets -->
                         <div class="form-group" id="animationGroup">
                             <label for="formControlRange">
-                                <b>Background Animation Presets</b>
+                                <b>Background Presets</b>
                                 <span class="badge badge-danger ml-2" id="AnimationBGName"></span>
                                 <span id="animationBGText"></span>
                             </label>
